--- a/main.html
+++ b/main.html
@@ -11,7 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div>
-		My current favourite song is <song_name>https://youtu.be/YR12Z8f1Dh8</song_name>
+		My current favourite song is 
+		<audio> 
+			<source src="https://www.youtube.com/watch?v=7ZLG5l-T0Ds&list=RD7ZLG5l-T0Ds&start_radio=1" type="audio/mp3" </audio>
+		<audio>
+			<source src="horse.mp3" type="audio/mpeg">
+		</audio>
 	</div>
 
 </body>
