--- a/main.html
+++ b/main.html
@@ -12,11 +12,12 @@
 </script>
 	<div>
 		My current favourite song is 
-		<audio> 
-			<source src="https://www.youtube.com/watch?v=7ZLG5l-T0Ds&list=RD7ZLG5l-T0Ds&start_radio=1" type="audio/mp3" </audio>
-		<audio>
+		<audio controls> 
+			<source src="https://www.youtube.com/watch?v=7ZLG5l-T0Ds&list=RD7ZLG5l-T0Ds&start_radio=1" type="audio/mp3">		
 			<source src="horse.mp3" type="audio/mpeg">
+			Looks like its not working.:/
 		</audio>
+			Looks like its not working.:/
 	</div>
 
 </body>
