--- a/main.html
+++ b/main.html
@@ -1,25 +1,13 @@
-<!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<div>
-		My current favourite song is 
-		<audio controls> 
-<!-- 			<source src="https://www.youtube.com/watch?v=7ZLG5l-T0Ds&list=RD7ZLG5l-T0Ds&start_radio=1" type="audio/mp3">		
-			<source src="horse.mp3" type="audio/mpeg"> -->
-			 <div> <link rel="audio" href="https://www.youtube.com/watch?v=7ZLG5l-T0Ds&list=RD7ZLG5l-T0Ds&start_radio=1" </div>		Looks like its not working.:/
-		</audio>
-			Looks like its not working.:/
-	</div>
-
-</body>
-<!-- <have.attr></have.attr> -->
+	<head>
+		<title>
+			MY favorite Song
+		</title>
+	</head>
+	<body>
+		<div>
+			My current favourite song is 
+			<a href="https://www.youtube.com/watch?v=LmIwXA0ljL4"></a>
+		</div>
+	</body>
 </html>
